Changelog Acumulus web shop extensions
======================================

This file contains a historical overview of changes in our own code.

8.3.1 (2024-10-??)
------------------------
Refactorings:
- ALL: Moved margin scheme handling from the ItemLineCollectors to CompleteMarginScheme.
- ALL: Moved adding vat range from the Line Collector phase to the Completor phase.


8.3.0 (2024-09-26) (MA, JOO)
----------------------------
Minimal requirements:
- This plugin now requires PHP 8.0. This means that support has been dropped for the
  following shop/CMS versions:
    * Joomla 3
    * PrestaShop 1.7
    * VirtueMart 3
  Note that PHP 8.0 already reached end of life and will no longer receive security
  updates. So, in the near future we will upgrade our minimal requirements to PHP 8.1.

Incompatibilities:
- Mappings: For those who have custom mappings: lots of "objects" were renamed. If, in the
  past, you have defined mappings for order item lines in the mappings form, you MUST
  check and probably adapt those settings. The following properties are no longer
  available. Note that we try to update most of them automatically:
  - invoiceSource::...: use source::...
  - invoiceSource::getSource()::...: use source::getShopObject()::...
  - invoiceSourceType::label: use source:getTypeLabel(2)
  - originalInvoiceSource: ...
  - originalInvoiceSourceType: ...
  - refund: use source::isCreditNote()::...
  - order or refundedOrder: use source::getOrder() resp. source::getParent().
  - refundedInvoiceSource: ...
  - refundedInvoiceSourceType: ...
- Events: For those that have custom code on top of our library: events have been renamed
  and parameters have changed. The customise_acumulus_invoice example plugins that we
  publish have not ye been updated and will thus no longer work.

- Features:
- JOO: Native support for Joomla 5, our component and plugins do no longer need the compat